@@ -9,6 +9,9 @@ o Added a help menu item for viewing README.txt
 
 o Added a help menu item for viewing CHANGES.txt.
 
+o The toolbar configuration of each of the guide windows is now saved and
+  restored between WEG sessions.
+
 Changes since v2.11
 ===================
 
